fostaris project second push

--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                     </a>
                 </div>
                 <div class="category-list-item">
-                    <a href="">r;
+                    <a href="">
                         <div class="icon">
                             <i class="lni lni-briefcase"></i>
                         </div>
@@ -337,7 +337,7 @@
                     <div class="single-product">
                         <div class="product-img">
                             <a href="product-details.html">
-                                <img src="assets/images/product/warehouse-phone.jpg" alt="">
+                                <img src="assets/images/product/warehouse - Iphone.jpg" alt="">
                             </a>
                             <div class="product-action">
                                 <a href="javascript:void(0)"><i class="lni lni-heart"></i></a>
@@ -870,7 +870,7 @@
                                     <span>Email:</span> info@fostarislimited.com
                                 </li>
                                 <li>
-                                    <span>Location:</span>01 Solomon Oroale street, freedom way lekki phase 1,lagos.
+                                    <span>Location:</span> 1 Solomon Oroale street, freedom way lekki phase 1,lagos.
                                 </li>
                             </ul>
                         </div>
