fostaris third push

--- a/about.html
+++ b/about.html
@@ -210,7 +210,7 @@
                             <div class="content">
                                 <h3>Effective communication
                                 </h3>
-                                <p>Buy and sell everything from used cars to mobile phones and computer.</p>
+                                <p>Giving and taking feedback, empathy, and respectfulness, responding to messages, having volume and clarity in our messages</p>
                             </div>
                         </div>
                         <div class="why-chose-item">
@@ -219,7 +219,7 @@
                             </div>
                             <div class="content">
                                 <h3>Reliability</h3>
-                                <p>Buy and sell everything from used cars to mobile phones and computer.</p>
+                                <p>Reliability is a our fundamental concept in many aspects of life and business because it underpins trust, consistency, and dependability.</p>
                             </div>
                         </div>
                     </div>
